# etl-bitcoin-pipeline

./: .gitignore  LICENSE  README.md  bitcoin_json  pyproject.toml
exemplos/: exemplo01.py  exemplo02.py  exemplo03.py
src/: dashboard.py  pipeline00.py  pipeline01.py
